--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<p style="text-align: center; background-color: white;">
+<p style="text-align: center;">
   <a href="{{site.baseurl}}/">Home</a> |
   <a href="{{site.baseurl}}/venue.html">Venue</a> | 
   <a href="{{site.baseurl}}/schedule.html">Schedule</a> | 
