--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,5 +2,10 @@
   <a href="{{site.baseurl}}/">Home</a> |
   <a href="{{site.baseurl}}/venue.html">Venue</a> | 
   <a href="{{site.baseurl}}/schedule.html">Schedule</a> | 
-  <a href="{{site.baseurl}}/submissions.html">Submissions</a> | 
+  <a href="{{site.baseurl}}/keynotes.html">Keynotes</a> |
+  <a href="{{site.baseurl}}/submissions.html">Submissions</a> |
+  <a href="{{site.baseurl}}/registration.html">Registration</a> |
+  <a href="{{site.baseurl}}/sponsors.html">Sponsors</a> |
+  <a href="{{site.baseurl}}/code of conduct.html">Code of Conduct</a> | 
+  <a href="{{site.baseurl}}/previous.html">Previous</a>
 </p>
